--- a/ShapeCalculator/ShapeCalculator.csproj
+++ b/ShapeCalculator/ShapeCalculator.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Triangle\EquilateralTriangle.cs" />
+    <Compile Include="Model\Triangle\IsoscelesTriangle.cs" />
+    <Compile Include="Model\Triangle\RectangularTriangle.cs" />
+    <Compile Include="Model\Triangle\Triangle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\ShapeBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
